refactor: update CORS to include localhost:8080